# preem-hle

./: .gitignore  CMakeLists.txt  README.md  allocator.cc  allocator.h  api.txt  bridge.py  coredll.cc  coredll_ordinals.inl  coredll_symbols.h  coredll_symbols.inl  disassembler.cc  disassembler.h  export_lookup.py  functions.cc  lookup.py  main.cc  modules.cc  modules.h  pe.h  prebuild.sh  process.cc  process.h  symbols.inl  utils.cc  utils.h  winapi_impl.cc
dependencies/capstone/: CMakeLists.txt
dependencies/capstone/bindings/python/capstone/: __init__.py
dependencies/glad-4.1/: README.md
dependencies/glad-4.1/include/glad/: glad.h
dependencies/glad-4.1/src/: glad.c
modules/: coredll.cc  modules.cc  types.h
roms/AlienHominid/Data/: AlienHominid.spr  FBI.spr  L1-1.lvl  Projectiles.spr
roms/RichardBurnsRally/: file_id.diz
roms/RichardBurnsRally/GZGA200013/: CARSTATS.RCX  Credits.eng  Credits.spa  DEBUG.RCX  DriverTimes.RCX  EFFECTS.RCX  FE_HMPS.RCX  FRONTEND.RCX  HUD.RCX  PACENOTES.RCX  REPLAY.RCX  credits.fre  credits.ger  credits.ita  strings.eng  strings.fre  strings.ger  strings.ita  strings.spa
roms/RichardBurnsRally/GZGA200013/RBRCars/: Citroen Xsara.rcx  Hyundai Accent.rcx  Lancer Evo VII.rcx  MG ZR.rcx  Peugeot 206.rcx  Subaru Impreza 00.rcx  Subaru Impreza 03.rcx  Toyota Corolla.rcx  Type_01.rcx  Type_02.rcx  Type_03.rcx  Type_04.rcx  Type_05.rcx  Type_06.rcx  Type_07.rcx  Type_08.rcx  checkpoint.rcx  fegizmondo.rcx
roms/RichardBurnsRally/GZGA200013/RBRLevels/: arctic1.rcx  arctic2.rcx  british1.rcx  british2.rcx  festage.rcx  french1.rcx  french2.rcx  japanese1.rcx  japanese2.rcx  usa1.rcx  usa2.rcx
roms/RichardBurnsRally/GZGA200013/RBRMovies/: intro.wmv  sci.wmv
roms/Trailblazer/GZGA200012/: GZGA200012
scripts/: generate_api_table.py
